--- a/style.css
+++ b/style.css
@@ -1,7 +1,29 @@
+:root {
+  --font1-: "Open Sans", sans-serif;
+  --font2-: "Outfit", sans-serif;
+  --font3-: "Inter", sans-serif;
+  --font4-: "Rubik", sans-serif;
+  --color1-: #7253a4;
+  --color2-: #ffffff;
+  --color3-: #c11574;
+  --color4-: #f3b411;
+  --color5-: #0e0a14;
+  --color6-: #eaecf0;
+  --color7-: #f8f8f8;
+  --color8-: #646464;
+}
+/* body {
+  padding-left: 100px;
+  padding-right: 100px;
+} */
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 nav ul {
   display: flex;
@@ -10,9 +32,725 @@ nav ul {
 }
 nav ul li {
   margin: 0 15px;
+  font-family: var(--font1-);
+  font-weight: 700px;
+  font-size: 18px;
 }
 * {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  transition: all 0.3s ease-in-out;
+}
+.button > button {
+  padding: 8px 35px;
+  border-radius: 25px;
+}
+.login {
+  background-color: transparent;
+  border: 1px solid var(--color1-);
+  color: var(--color1-);
+  margin-right: 15px;
+  font-family: var(--font1-);
+  font-weight: 700px;
+  font-size: 16px;
+}
+.signin {
+  background-color: var(--color1-);
+  color: var(--color2-);
+  border: none;
+  font-family: var(--font1-);
+  font-weight: 700px;
+  font-size: 16px;
+}
+.first {
+  background-color: var(--color7-);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.right img {
+  width: 100%;
+}
+.left {
+  flex-basis: 40%;
+}
+.left > h1 {
+  font-family: var(--font2-);
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 57px;
+}
+.left > p {
+  color: var(--color8-);
+  font-family: var(--font3-);
+  font-size: 15px;
+  font-weight: 400px;
+  line-height: 27px;
+  padding-top: 15px;
+}
+.purple {
+  color: #7253a4;
+}
+.left button {
+  padding: 13px 20px;
+  margin-top: 18px;
+  border-radius: 5px;
+}
+.but {
+  background-color: var(--color1-);
+  border: none;
+  font-family: var(--font3-);
+  font-weight: 600px;
+  color: var(--color2-);
+}
+.ton {
+  background-color: transparent;
+  border: 1px solid var(--color1-);
+  font-family: var(--font3-);
+  font-weight: 600px;
+  color: var(--color1-);
+  margin-left: 10px;
+}
+.numbers {
+  display: flex;
+  margin-top: 15px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.fifty {
+  flex-basis: 30%;
+  padding-right: 30px;
+}
+.fifty h2 {
+  font-family: var(--font2-);
+  font-weight: 700px;
+  font-size: 28px;
+  color: var(--color3-);
+  margin-bottom: 5px;
+}
+.fifty p {
+  font-family: var(--font3-);
+  font-weight: 600px;
+  font-size: 15px;
+  color: var(--color5-);
+}
+
+.thousand {
+  flex-basis: 30%;
+  padding-right: 35px;
+}
+.thousand h2 {
+  font-family: var(--font2-);
+  font-weight: 700px;
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+.thousand p {
+  font-family: var(--font3-);
+  font-weight: 600px;
+  font-size: 15px;
+  color: var(--color5-);
+}
+.hundred {
+  flex-basis: 30%;
+  padding-right: 30px;
+}
+.hundred h2 {
+  font-family: var(--font2-);
+  font-weight: 700px;
+  font-size: 28px;
+  color: var(--color4-);
+  margin-bottom: 5px;
+}
+.hundred p {
+  font-family: var(--font3-);
+  font-weight: 600px;
+  font-size: 15px;
+  color: var(--color5-);
+}
+.right {
+  flex-basis: 40%;
+}
+
+.second {
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-top: 40px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.text > h3 {
+  font-family: var(--font1-);
+  color: var(--color1-);
+  font-weight: 600px;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+}
+.text > h2 {
+  font-family: var(--font2-);
+  color: var(--color5-);
+  text-align: center;
+  font-weight: 500px;
+  font-size: 28px;
+  line-height: 35px;
+  margin-top: 20px;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 35px;
+}
+.box-1 {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start; */
+  flex-wrap: wrap;
+  align-items: center;
+  flex-basis: 30%;
+  gap: 10px;
+  padding: 35px 35px 35px 35px;
+  background-color: var(--color1-);
+  border-radius: 10px;
+}
+.icon {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-start;
+  padding-bottom: 10px;
+  gap: 12px;
+}
+.icon img {
+  width: 30px;
+}
+.icon2 img {
+  width: 30px;
+}
+.icon3 img {
+  width: 30px;
+  align-self: flex-start;
+}
+.parr {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 15px;
+}
+.icon > h3 {
+  font-family: var(--font2-);
+  color: var(--color2-);
+  font-weight: 700px;
+  font-size: 18px;
+}
+.box-1 p {
+  font-family: var(--font3-);
+  color: var(--color2-);
+  font-weight: 400px;
+  font-size: 14px;
+}
+
+.box-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 30%;
+  gap: 10px;
+  padding: 35px 35px 35px 35px;
+  background-color: var(--color2-);
+  border-radius: 10px;
+  border: 1px solid #d8d8d866;
+  box-shadow: #000000;
+}
+.icon2 {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-start;
+  padding-bottom: 10px;
+  gap: 12px;
+}
+.icon2 > h3 {
+  font-family: var(--font2-);
+  color: var(--color5-);
+  font-weight: 700px;
+  font-size: 18px;
+}
+.box-2 p {
+  font-family: var(--font3-);
+  color: var(--color8-);
+  font-weight: 400px;
+  font-size: 14px;
+}
+
+.box-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 30%;
+  gap: 10px;
+  padding: 35px 35px 35px 35px;
+  background-color: var(--color1-);
+  border-radius: 10px;
+}
+.icon3 {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-start;
+  padding-bottom: 10px;
+  gap: 12px;
+}
+.icon3 > h3 {
+  font-family: var(--font2-);
+  color: var(--color2-);
+  font-weight: 700px;
+  font-size: 18px;
+}
+.box-3 p {
+  font-family: var(--font3-);
+  color: var(--color2-);
+  font-weight: 400px;
+  font-size: 14px;
+}
+.button1 > button {
+  padding: 10px;
+  margin-left: 500px;
+  background-color: var(--color1-);
+  color: var(--color2-);
+  border: none;
+  border-radius: 5px;
+  font-family: var(--font3-);
+  font-weight: 500px;
+  font-size: 10px;
+  margin-top: 25px;
+}
+.third {
+  margin-top: 50px;
+  display: flex;
+  padding-left: 80px;
+  padding-right: 80px;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.third-left {
+  flex-basis: 30%;
+}
+.third-left img {
+  width: 100%;
+}
+.third-right {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 65%;
+  align-self: flex-start;
+}
+.benefit h1 {
+  padding-bottom: 20px;
+  line-height: 50px;
+  font-size: 36px;
+  font-family: var(--font2-);
+  font-weight: 500;
+}
+.boxes1 {
+  display: flex;
+  gap: 100px;
+  justify-content: space-between;
+}
+.boxes2 {
+  display: flex;
+  gap: 100px;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+.flexibility {
+  flex-basis: 48%;
+}
+/* .boxes1 > boxes div:nth-child(2) */
+.practical {
+  flex-basis: 48%;
+}
+.diverse {
+  flex-basis: 48%;
+}
+.supportive {
+  flex-basis: 48%;
+}
+.flexibility > h3 {
+  font-family: var(--font2-);
+  font-weight: 600px;
+  font-size: 16px;
+  color: var(--color5-);
+  padding-bottom: 10px;
+}
+.flexibility > p {
+  font-family: var(--font3-);
+  font-weight: 400px;
+  font-size: 14px;
+  color: var(--color8-);
+  padding-bottom: 10px;
+}
+.flexibility img {
+  padding-bottom: 10px;
+}
+.practical > h3 {
+  font-family: var(--font2-);
+  font-weight: 600px;
+  font-size: 16px;
+  color: var(--color5-);
+  padding-bottom: 10px;
+}
+.practical > p {
+  font-family: var(--font3-);
+  font-weight: 400px;
+  font-size: 14px;
+  color: var(--color8-);
+  padding-bottom: 10px;
+}
+.practical img {
+  padding-bottom: 10px;
+}
+.diverse > h3 {
+  font-family: var(--font2-);
+  font-weight: 600px;
+  font-size: 16px;
+  color: var(--color5-);
+  padding-bottom: 10px;
+}
+.diverse > p {
+  font-family: var(--font3-);
+  font-weight: 400px;
+  font-size: 14px;
+  color: var(--color8-);
+  padding-bottom: 10px;
+}
+.diverse img {
+  padding-bottom: 10px;
+}
+.supportive > h3 {
+  font-family: var(--font2-);
+  font-weight: 600px;
+  font-size: 16px;
+  color: var(--color5-);
+  padding-bottom: 10px;
+}
+.supportive > p {
+  font-family: var(--font3-);
+  font-weight: 400px;
+  font-size: 14px;
+  color: var(--color8-);
+  padding-bottom: 10px;
+}
+.supportive img {
+  padding-bottom: 10px;
+}
+
+.fourth h3 {
+  font-family: var(--font3-);
+  color: var(--color1-);
+  font-weight: 600px;
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.fourth h2 {
+  font-family: var(--font2-);
+  color: var(--color5-);
+  font-weight: 600px;
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.fourth h4 {
+  font-family: var(--font3-);
+  color: var(--color5-);
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.fourth p {
+  font-family: var(--font3-);
+  color: var(--color8-);
+  font-weight: 400;
+  font-size: 12px;
+  text-align: center;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.pro {
+  font-family: var(--font3-);
+  color: var(--color5-);
+  font-weight: 700;
+  font-size: 16px;
+  text-align: center;
+  line-height: 30px;
+}
+.flex-4th {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: center;
+  margin: 20px;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+.flex-41th {
+  flex-basis: 22%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 1px solid #e3e3e3;
+  width: 100%;
+  padding-top: 15px;
+}
+.flex-41th:hover {
+  transform: scale(1.05);
+}
+
+/* check for box-shadow */
+.flex-41th .cool {
+  font-family: var(--font3-);
+  color: var(--color1-);
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+}
+.flex-41th .cooll {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.fifth {
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 30px;
+}
+.fifth .up {
+  padding-top: 25px;
+}
+.fifth .up h2 {
+  font-family: var(--font3-);
+  color: var(--color1-);
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+}
+.fifth .up h1 {
+  font-family: var(--font2-);
+  color: var(--color5-);
+  font-weight: 700;
+  font-size: 28px;
+  text-align: center;
+  padding-top: 10px;
+}
+.fifth .down {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  border: 1px solid #e3e3e3;
+  border-top: none;
+  border-radius: 15px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.fifth .down-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 40%;
+  padding: 50px;
+}
+
+.fifth .down-image h1 {
+  font-family: var(--font4-);
+  color: var(--color5-);
+  font-weight: 600;
+  font-size: 28px;
+  text-align: center;
+  padding-top: 10px;
+}
+.fifth .down-image h2 {
+  font-family: var(--font4-);
+  color: var(--color1-);
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  padding-top: 10px;
+}
+.fifth .down-text {
+  /* padding-top: 20px; */
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.fifth .down-text .call {
+  /* padding-right: 10px; */
+  align-self: flex-end;
+}
+.fifth .down-text img {
+  width: 40px;
+}
+.fifth .down-text p {
+  font-family: var(--font4-);
+  color: var(--color8-);
+  font-weight: 400;
+  font-size: 18px;
+  text-align: left;
+  padding-left: 32px;
+  line-height: 24px;
+  /* padding-top: 25px;
+  padding-bottom: 25px; */
+}
+footer {
+  margin-top: 30px;
+  background-color: #101828;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+.upper {
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  align-items: flex-start;
+}
+.diva {
+  flex-basis: 25%;
+  /* border: 1px solid green; */
+  padding: 15px 15px 25px 35px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.diva h3 {
+  font-family: var(--font3-);
+  color: var(--color6-);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 20px;
+}
+.divb {
+  flex-basis: 15%;
+  /* border: 1px solid green; */
+  padding: 15px 15px 15px 35px;
+  gap: 10px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.divb h3 {
+  font-family: var(--font3-);
+  color: var(--color6-);
+  font-size: 12px;
+  font-weight: 500;
+}
+.divc {
+  flex-basis: 15%;
+  /* border: 1px solid green; */
+  padding: 15px 15px 15px 35px;
+  gap: 10px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.divc h3 {
+  font-family: var(--font3-);
+  color: var(--color6-);
+  font-size: 12px;
+  align-items: center;
+  font-weight: 500;
+}
+.divd {
+  flex-basis: 15%;
+  /* border: 1px solid green; */
+  padding: 15px 15px 15px 35px;
+  gap: 10px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.divd h3 {
+  font-family: var(--font3-);
+  color: var(--color6-);
+  font-size: 12px;
+  align-items: center;
+  font-weight: 300;
+}
+.dive {
+  flex-basis: 20%;
+  /* border: 1px solid green; */
+  padding-left: 100px;
+  gap: 10px;
+  justify-content: center;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+}
+.dive h4 {
+  font-family: var(--font3-);
+  color: #101130;
+  font-size: 18px;
+  align-items: center;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.upper p {
+  font-family: var(--font3-);
+  color: var(--color1-);
+  font-size: 10px;
+  align-items: center;
+  font-weight: 600;
+}
+.diva .proo {
+  font-family: var(--font1-);
+  color: var(--color1-);
+  font-size: 14px;
+  align-items: center;
+  font-weight: 700;
+}
+.lower {
+  display: flex;
+  padding-bottom: 20px;
+  padding-top: 30px;
+  justify-content: space-between;
+  align-content: center;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+.lower h4 {
+  font-family: var(--font3-);
+  color: var(--color2-);
+  font-size: 12px;
+  align-items: center;
+  justify-content: flex-start;
+  font-weight: 400;
+}
+.lower img {
+  align-self: flex-end;
+  width: 10%;
+  padding-bottom: 5px;
 }
